--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -10,6 +10,13 @@
 
 <body>
     Chat App
+<form action="" id="msgform">
+<input type="text" placeholder="Message">
+<button>Send :)</button>
+
+</form>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./js/chat.js"></script>
 </body>
 
 </html>
