dynamic Location renderring

--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -11,6 +11,7 @@
 <body>
     Chat App
     <div id="message"></div>
+    <div id="location"></div>
     <form action="" id="msgform">
         <input name="message" type="text" placeholder="Message">
         <button>Send :)</button>
@@ -24,6 +25,14 @@
     <div>
      <p>{{message }}</p>
         </div>
+</script>
+
+<script id="location-template" type="text/html">
+<div>
+    <p><a href="{{url}}" target="_blank">Location</a></p>
+</div>
+
+
 </script>
 
 
