--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -23,13 +23,13 @@
 
 <script id="message-template" type="text/html">
     <div>
-     <p>{{message }}</p>
+     <p> {{createdAt}} - {{message }}</p>
         </div>
 </script>
 
 <script id="location-template" type="text/html">
 <div>
-    <p><a href="{{url}}" target="_blank">Location</a></p>
+    <p><a href="{{url}}" target="_blank" style="text-decoration: none;">Location</a></p>
 </div>
 
 
