time stamps for location

--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -29,7 +29,7 @@
 
 <script id="location-template" type="text/html">
 <div>
-    <p><a href="{{url}}" target="_blank" style="text-decoration: none;">Location</a></p>
+    <p>{{createdAt}} <a href="{{url}}" target="_blank" style="text-decoration: none;">Location</a></p>
 </div>
 
 
