--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -17,7 +17,7 @@
 
 
 <label>Display Name</label>
-<input type="text" name="UserName" placeholder="Name" required>
+<input type="text" name="username" placeholder="Name" required>
 <label>Room</label>
 <input type="text" name="room" placeholder="Room" required>
 <button>Join</button>
